--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@
     width: 100%;
 }
 .heroImg{
-    height: 450px;
+    height: 550px;
     width: 450px;
 }
 h1{
@@ -52,4 +52,9 @@ h1{
 }
 .nav-underline{
     color:hsl(136, 65%, 51% ;
+}
+@media screen and (min-width: 480px) {
+.card{ color: aqua;
+
+}
 }
