--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     color: hsl(233, 26%, 24%);
+   
+}
+html{
+    scroll-behavior: smooth;
     font-family: 'Public Sans' sans-serif;
 }
 .reqBtn{
