--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@ html{
 .hero{
     background-color: hsl(0, 0%, 98%);
     width: 100%;
+    overflow: hidden;
 }
 .heroImg{
     height: 550px;
@@ -29,8 +30,7 @@ h1{
     font-size: 3rem;
 }
 .hero-right{
-    background-image: 
-    url("./images/bg-intro-desktop.svg");
+    background-image:url(./images/bg-intro-desktop.svg);
 }
 .nav-pages{
     align-items: center;
@@ -57,6 +57,39 @@ h1{
 }
 .nav-underline{
     color:hsl(136, 65%, 51% ;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+.navbar{
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+.navbar-toggle-btn{
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    padding: 0 20px;
+
+}
+.navbar-toggle-btn span{
+   display:block ;
+   background-color: hsl(233, 26%, 24%) ;
+   width: 25px;
+   height: 1px;
+   transition: 0.25 ease;
+}
+.navbar-toggle-btn .active .one{
+
 }
 @media screen and (min-width: 480px) {
 .card{ color: aqua;
